app/css/main.css
* {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
}

html {
  -webkit-tap-highlight-color: transparent;
}

body {
  background-color: #2f3136;
  margin: 0;
}

a {
  color: #0096cf;
}

code {
  background: #2f3136;
  color: #839496;
  display: inline-block;
  overflow-y: visible;
  padding: .5em;
  font-family: monospace;
  border-radius: 5px;
}

.button-container {
  position: absolute;
  top: 0;
  text-align: center;
  height: 7%;
  width: 20%;
  margin: 0;
}

#voice-container {
  border-bottom: 1px solid #36393f;
  background-color: #2a2c31;
  position: absolute;
  bottom: 7%;
  text-align: center;
  width: 20%;
  margin: 0;
  padding: 0;
}

#voice-connected {
  color: #43b581;
  float: left;
  margin: 0.5em 1em 0 1.5em;
  display: block;
}

#voice-status {
  color: #72767d;
  float: left;
  margin: 0 2em 1em 2em;
  display: block;
}

.user-container {
  background-color: #2a2c31;
  position: absolute;
  bottom: 0;
  text-align: center;
  height: 7%;
  width: 20%;
  margin: 0;
}

#user-name {
  margin: 0;
  margin-top: 1em;
  margin-left: 1em;
  color: #b9bab6;
  float: left;
}

#user-pfp {
  margin-left: 3em;
  float: left;
  margin-top: 1em;
  border-radius: 50%;
  width: 30px;
  cursor: pointer;
}

.message {
  display: inline-block;
  text-align: center;
}

.buttons {
  margin-top: 1em;
  background-color: #474a4c;
  border-radius: 8px;
  color: white;
  padding: 10px 24px;
  text-align: center;
  text-decoration: none;
  border: 2px solid #36393e !important;
  font-size: 10px;
}

.buttons:hover {
  transition-duration: 0.4s;
  background-color: white;
  color: black;
}

#back {
  margin-left: 1em;
  float: left;
}

#back:hover {
  background-color: white !important;
  background-color: white !important;
}

#switch {
  margin-right: 1em;
  float: right;
}

#switch:hover {
  background-color: rgb(148, 144, 144) !important;
  background-color: rgb(148, 144, 144) !important;
}

#search-text {
  margin: 0;
  margin-top: 1em;
  display: inline-block;
  height: 2em;
  background-color: #36393e;
  color: #bebfc1;
  text-align: center;
  padding: 0;
  width: 60%;
  border: 2px #2f3136 solid;
  display: none;
}

.display-container {
  display: inline-block;
  height: 100%;
  width: 100%;
}

#message-text {
  height: 2em;
  position: absolute;
  bottom: 0;
  left: 20%;
  background-color: #36393e;
  color: #bebfc1;
  text-align: left;
  padding: 0;
  padding-left: 1em;
  margin: 0;
  width: calc(80% - 1em);
  border: 0;
  border-top: 2px #2f3136 solid;
}

#message-text:focus {
  color: #bebfc1;
}

.display-holder {
  display: inline-block;
  width: 100%;
  margin: 0;
  padding: 0;
}

.left-bar {
  position: absolute;
  margin: 0;
  left: 0;
  bottom: 7%;
  padding: 0 1em;
  width: calc(20% - 2em);
  background-color: #2f3136;
  overflow-y: auto;
  height: 86%;
}

.right-bar {
  position: absolute;
  margin: 0;
  right: 0;
  bottom: calc(2em - 2px);
  padding: 0 1em;
  width: calc(20% - 2em);
  background-color: #2f3136;
  overflow-y: auto;
  height: calc(96% + 2px);
}

.rightBarRole {
  color: hsla(0,0%,100%,.4);
  font-size: 12px;
  font-weight: 500;
  letter-spacing: .08em;
  line-height: 20px;
  overflow: hidden;
  padding-left: 16px;
  padding-top: 30px;
  text-transform: uppercase;
}

.message-display {
  position: absolute;
  left: 20%;
  top: 0;
  bottom: 0;
  right: 0;
  background-color: #36393e;
  overflow-y: scroll;
  height: calc(100% - 2em + 2px);
}

.message-manager {
  float: right;
  width: 30em;
}

.message {
  color: #b9bab6;
}

.channel-container {
  margin-bottom: 1em;
  padding: 3px 0;
  border-radius: 4px;
}

.channel {
  color: #72767d;
  padding-left: 2em;
}

.channel:hover {
  color: #b9bbbe;
}

.message-container {
  width: auto;
  padding-left: 2em;
  text-align: left;
  border-bottom: 1px solid #3e4146;
}

#icon {
  margin-top: 2px;
  margin-right: 0;
  float: left;
}

.server-container {
  width: auto;
  margin-left: 1em;
  margin-bottom: 1em;
}

.server {
  color: #b9bab6;
  margin-left: 2em;
}

.dm-container {
  width: auto;
  border-radius: 4px;
  padding-left: 1em;
  margin-bottom: 0.5em;
}

.dm {
  color: #72767d;
  margin-left: 2em;
}

.dm:hover {
  color: #b9bbbe;
}

.highlight {
  background-color: rgba(79,84,92,.6);
}

.highlight-title {
  color: #b9bbbe;
}

.message-holder {
  border-top: 1px solid #3e4146;
  margin-bottom: 0;
  background: transparent;
  display: inline-block;
  overflow: hidden;
  position: relative;
  padding-left: 0.5em;
  width: 100%;
  height: auto;
  text-align: left;
  line-height: 2em;
  max-width: calc(100% - 1em);
  word-wrap: break-word;
}
}

.message-author {
  display: inline-block;
  position: relative;
  top: -4px;
  padding: 0;
  cursor: default;
}

.message-time {
  display: inline-block;
  position: relative;
  top: -4px;
  padding: 0;
  font-size: 10px;
  color: hsla(0,0%,100%,.2);
  margin-left: 0.5em;
  vertical-align: text-top;
}

.message-received {
  color: #b9bab6;
  display: inline-block;
  margin: 0;
}

.message-content-holder {
  color: #b9bab6;
  margin: 0;
}

.message-image {
  width: 15em;
  display: block;
}

.pfp {
  display: inline-block;
  border-radius: 50%;
  width: 20px;
  margin-right: 0.5em;
  margin-top: 1em;
  cursor: pointer;
  vertical-align: sub;
}

.right-bar-pfp {
  vertical-align: bottom !important;
}

.right-bar-user {
  padding-left: 16px;
}

.warning-message {
  padding-left: 16px;
  margin-bottom: 16px;
  margin-top: 1em;
  color: rgb(166, 166, 166);
}

.trash {
  cursor: pointer;
  vertical-align: sub;
  margin-left: 0.5em;
}

#changeTokenTitle {
  margin-bottom: 0;
  color: lightgray;
}

#changeTokenText {
  background-color: #36393e;
  border: 2px #2f3136 solid;
  color: #bebfc1;
}

#loading-title {
  text-align: center;
  color:rgba(185, 187, 190, 0.6);
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background-color: #2f3136;
  border-color: #36393e;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: #1e2124;
  border-color: #36393e;
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
}

.material-icons.md-18 {
  font-size: 18px;
}

.material-icons.md-dark.md-inactive {
  color: rgba(0, 0, 0, 0.26);
}

